--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 *{
   padding: 0;
   margin: 0;
@@ -6,10 +7,15 @@ input,button{
   -webkit-appearance: none;
   appearance: none;
   display: block;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 body{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style : normal;
+  background-color: #2d3250;
+  color: white;
 }
 form{
   padding: 20px;
@@ -21,17 +27,23 @@ form{
 }
 form input[type="text"]{
   border: none;
-  border-bottom: 1px dashed #999;
+  border-radius: 2em;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
   padding: 5px;
   text-align: center;
-  color: #333;
+  color: black;
   font-size: 1.5em;
   width: 600px;
+  background-color: white;
 }
 form input[type="submit"]{
   background-color: transparent;
   border: 1px solid #333;
   color: #333;
+  background-color: #ffa247;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 500;
   padding: 15px;
   border-radius: 10px;
   margin-top: 20px;
@@ -43,33 +55,37 @@ form input[type="submit"]{
 
 /* Componente tarea*/
 .tarea{
-  border: 2px solid #333;
   border-radius: 20px;
   padding: 20px;
   margin-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  background-color: #424769;
+  
 }
 .tarea h2, .tarea input{
-  font-size: 2em;
-  color:#333;
+  font-size: 1.8em;
   width: 100%;
   font-weight: normal;
   display: none;
+  
+  
 }
 .tarea input{
   border: none;
-  border-bottom: 1px dashed #999;
-  padding-bottom: 5px;
+  border-radius: 0.5em;
+  padding: 0.2em 0.3em 0 0.3em;
+  background-color: #676f9d;
+  color: white;
 }
 .tarea .visible{
   display: block;
 }
 .boton{
-  background-color: transparent;
-  border: 1px solid #333;
-  color: #333;
+  background-color: #ffa247;
+  border: none;
+  color: black;
   padding: 15px;
   border-radius: 10px;
   margin-top: 20px;
@@ -79,7 +95,7 @@ form input[type="submit"]{
   width: 50px;
   height: 20px;
   border-radius: 10px;
-  background-color: #333;
+  background-color: #2d3250;
   margin-top: 20px;
   border: none;
   position: relative;
