--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ body{
   font-style : normal;
   background-color: #2d3250;
   color: white;
+  width: 100%;
+  height: 100%;
 }
 form{
   padding: 2em;
@@ -33,20 +35,26 @@ form input[type="text"]{
   text-align: center;
   color: black;
   font-size: 1.5em;
-  width: 600px;
+  width: 90%;
   background-color: white;
 }
 form input[type="submit"]{
-  background-color: transparent;
-  border: 1px solid #333;
+  border: 3px solid #ffa247;
   color: #333;
   background-color: #ffa247;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 500;
+  font-size: 1em;
   padding: 15px;
   border-radius: 10px;
   margin-top: 20px;
 }
+form input[type="submit"]:hover{
+  background-color: transparent;
+  color: #ffa247;
+  border: 3px solid #ffa247;
+}
+
 .info{
   display: flex;
   justify-content: center;
@@ -82,7 +90,7 @@ p{
 }
 
 .tarea h2, .tarea input {
-  font-size: 1.8em;
+  font-size: 1.5em;
   width: 100%;
   font-weight: normal;
   display: none;
@@ -146,9 +154,33 @@ p{
   position: absolute;
   top: 0;
   left: 0;
-  transition: left 0.8s,background-color 1s;
+  transition: left 0.8s, background-color 1s;
 }
 .terminada span{
   left:30px;
   background-color: #0c0;
+}
+
+/*-----MEDIA QUERY--------- */
+
+@media screen and (max-width:840px){ /* TABLET */
+  .tarea h2, .tarea input{
+    font-size: 1.5em;
+  }
+  .tareas{
+    width: 700px;
+  }
+
+}
+
+@media screen and (max-width:500px) {
+  form input[type="text"]{
+    font-size: 1.2em;
+  }
+  .tarea h2, .tarea input{
+    font-size: 1.2em;
+  }
+  .tareas{
+    width: 350px;
+  }
 }
